--- a/jamelgo.cabal
+++ b/jamelgo.cabal
@@ -36,7 +36,7 @@ Executable jamelgo
     xmlhtml                   >= 0.1,
     lens                      >= 4.0,
     aeson                     >= 0.7,
-    optparse-applicative      >= 0.8.0.1
+    filepath                  >= 1.3.0
 
   if flag(old-base)
     build-depends:
