--- a/jamelgo.cabal
+++ b/jamelgo.cabal
@@ -36,7 +36,9 @@ Executable jamelgo
     xmlhtml                   >= 0.1,
     lens                      >= 4.0,
     aeson                     >= 0.7,
-    filepath                  >= 1.3.0
+    filepath                  >= 1.3.0,
+    containers                >= 0.5,
+    directory                 >= 1.2.0
 
   if flag(old-base)
     build-depends:
