--- a/jamelgo.cabal
+++ b/jamelgo.cabal
@@ -38,7 +38,9 @@ Executable jamelgo
     aeson                     >= 0.7,
     filepath                  >= 1.3.0,
     containers                >= 0.5,
-    directory                 >= 1.2.0
+    directory                 >= 1.2.0,
+    distributive              >= 0.4,
+    transformers              >= 0.3
 
   if flag(old-base)
     build-depends:
