--- a/jamelgo.cabal
+++ b/jamelgo.cabal
@@ -27,7 +27,7 @@ Executable jamelgo
     heist                     >= 0.13    && < 0.14,
     MonadCatchIO-transformers >= 0.2.1   && < 0.4,
     mtl                       >= 2       && < 3,
-    snap                      >= 0.13    && < 0.14,
+    snap                      >= 0.13.2.5 && < 0.14,
     snap-core                 >= 0.9     && < 0.11,
     snap-server               >= 0.9     && < 0.11,
     snap-loader-static        >= 0.9     && < 0.10,
@@ -40,7 +40,8 @@ Executable jamelgo
     containers                >= 0.5,
     directory                 >= 1.2.0,
     distributive              >= 0.4,
-    transformers              >= 0.3
+    transformers              >= 0.3,
+    process-streaming         >= 0.0.1.1
 
   if flag(old-base)
     build-depends:
